[package]
name = "linkage-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "2.1.3", features = ["staking"], optional = false }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
cw-storage-plus = "2.0.0"
cw721-base = "0.18.0"
cw721 = "0.18.0"
cosmwasm-schema = "2.1.3"
schemars = "0.8.21"
sylvia = "1.2.1"
thiserror = "1.0.64"

[dev-dependencies]
cw-multi-test = { version = "2.1.1", features = ["staking"] }
sylvia = { version = "1.2.1", features = ["mt"] }